--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -60,7 +60,7 @@ Afternoon: Hacking
 ! Friday
 |Morning: Team status reports; hacking
 
-Afternoon: Hacking, most out of town participants depart
+Afternoon: Hacking, most out of town participants depart.  NESCent will arrange shuttles from NESCent to RDU.
 |-
 |}
 
