--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -86,7 +86,7 @@ Afternoon: Hacking, most out of town participants depart.  NESCent will arrange 
 |align="right"| '''September 24, 2010'''
 | Deadline for participant attendance commitment
 |-
-| align="right"| '''October 4, 2010 or October 7, 2010'''
+| align="right"| '''October 4 or 7, 2010'''
 | First group teleconference
 |-
 | align="right"| '''October 18-22, 2010'''
