/* [[Diversity and Phenotypes]] Use Cases */

--- a/wiki/Use_Cases.mediawiki
+++ b/wiki/Use_Cases.mediawiki
@@ -15,6 +15,10 @@ We already have
 
 * Your use case here
 
+== Multi-objective Use Cases ==
+
+Use cases that span more than one objective.
+
 == What's in a Use Case? ==
 
 Use cases typically specify:
