--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -1,30 +1,6 @@
-= First Teleconference Agenda =
+= Conference Calls =
 
-The first call is
-* October 4, 2010, 4pm Eastern US.  '''OR'''
-* October 7, 2010, 3pm Eastern US.
-
-We will cover the same topics in both calls.  Please participate in whichever one is more convenient.
-
-# [[Objectives]]: Quick review of the three objectives.
-# Introductions: what [[participants]]' interests are, and what you want to work on.
-# Resources
-#* [[Lists|Mailing List]]: all participants can post. 
-#* This wiki: All participants can update.  High quality content will be copied to [[gmod:Main Page|main GMOD wiki]] after the event.
-# Pre-hackathon work
-#* [[Use Cases]]: Clearly stated, concrete problems that can't be addressed currently, and that we could make significant progress towards during the hackathon.
-#** Use cases should be ''ripe for implementation.''  Ideas should be addressable with code and should not be open ended.
-#* Coalescing: Participants are encouraged to put forth use cases and advocate that they be worked on, and to do this before the event even starts.
-#* At least one more conference call, week of Oct 18-22.  ''Please [http://doodle.com/du2yy3g2chft2srn fill out the Doodle poll].''
-#* Please think about what training,if any, you would like to have on the first day.  Are there APIs or architectures you need to learn about that will help you during the week?  We'll run needed boot camps on the first day.  If you have ideas, please add them to the [[Boot Camps]] page.
-#* Update the [[participants]] page and create your own user pages.
-# Mechanics of the hackathon itself
-#* First day; intros, proposals, coalescing, hacking
-#* Subsequent days: progress reports, hacking
-#* Bring your own laptop.  If you can't let [[Dave]] know ASAP.
-#* Source code [[repositories]].
-
-We don't expect to discuss [[objectives]] in detail on this first call
+* [[Conference Calls#First Teleconference: October 4 & 7|First Teleconference: October 4 & 7]] 
 
 = Hackathon Agenda =
 
