/* Action Items Before Next Call */

--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -51,6 +51,6 @@ Most time was spent on introductions:  What people worked on and what they were 
 For all participants:
 # Post [[Use Cases]], either to the wiki, or the mailing list (and [[Dave]] will copy them to the wiki.  [[Eric]] has already created one.
 ## Once a use case is posted, comment on it, add to it, ... 
-# What computing resources does NESCent need to provide for you to get your job done?  Please post these to [[Hilmar]] and [[Dave]] or (preferable) to the mailing list.
+# What computing resources does NESCent need to provide for you to get your job done?  Please post these to [[Hilmar]] and [[Dave]] or (preferably) to the mailing list.
 # What [[Boot Camps]] you would like to see during the event.  Post them to the [[Boot Camps]] page or send them to the mailing list.
 # Create a user page.  Do this by clicking on your email address in the top bar of the wiki, typing something, and saving it.
