Change to wiki page

--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -1,3 +1,7 @@
+
+'''Note:''' We will have at least one more conference call, during the week of Oct 18-22.  ''Please [http://doodle.com/du2yy3g2chft2srn fill out the Doodle poll].''
+
+
 = First Teleconference: October 4 & 7 =
 
 The first call is
