--- a/wiki/Phylogenetics_and_Tree_Visualization.mediawiki
+++ b/wiki/Phylogenetics_and_Tree_Visualization.mediawiki
@@ -2,4 +2,15 @@ The [[gmod:GMOD Components|GMOD toolkit]] at present does not include web-based 
 
 Implementing these from scratch would be far beyond a suitable hackathon target. However, [http://solgenomics.net SGN] has a relatively mature [http://solgenomics.net/tools/align_viewer/ web-based multiple alignment and tree browser] that could be extracted from SGN's codebase and transformed into a GMOD component, an add-on for JBrowse.  Current Java-based tree viewers (such as [http://www.phylosoft.org/atv/ Archaeopteryx] or [http://www.phylowidget.org PhyloWidget]) could be used as the basis for a JavaScript-based tree viewer (or an applet that can be controlled through JavaScript) that integrates with JBrowse.
 
+== Interested [[Participants]] ==
+
+Please add your name below.
+
+* Add your name here
+* You too
+
+== See Also ==
+
+* [[Use Cases#Phylogenetics and Tree Visualization Use Cases|Phylogenetics and Tree Visualization Use Cases]]
+
 [[Category:Objectives]]
