--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -1,7 +1,7 @@
 = Conference Calls =
 
 * [[Conference Calls#First Teleconference: October 4 & 7|First Teleconference: October 4 & 7]]
-* At least one more conference call, week of Oct 18-22.  ''Please [http://doodle.com/du2yy3g2chft2srn fill out the Doodle poll].''
+* [[Conference Calls#Second Teleconference: October 21|Second Teleconference: October 21, 3pm Eastern US]]
 
 = Hackathon Agenda =
 
