--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -57,3 +57,12 @@ For all participants:
 # Someone should contact the developers of NeXML and PhyloXML to see if they have any suggestions/advice on visualizing phylogenetic data using those formats.
 # Create a user page.  Do this by clicking on your email address in the top bar of the wiki, typing something, and saving it.
 # [[Dave]] was going to list people's names on each of the three objective pages, based on what he believes their interests are.  ''However he quickly found this very difficult to do.'' Therefore, this action item is: Participants will list their names on the [[Objectives]] pages that they are interested in.
+
+= Second Teleconference: October 21 =
+
+The second call is
+* October 21, 2010, 3pm Eastern US
+
+== Agenda ==
+
+== Minutes ==
