Change to wiki page

--- a/wiki/Conference_Calls.mediawiki
+++ b/wiki/Conference_Calls.mediawiki
@@ -1,5 +1,4 @@
-'''Note:''' We will have at least one more conference call, during the week of Oct 18-22.  ''Please [http://doodle.com/du2yy3g2chft2srn fill out the Doodle poll].''
-
+'''Note:''' The next conference call is Thursday, October 21, at 3pm Eastern.
 
 = First Teleconference: October 4 & 7 =
 
