--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -13,30 +13,24 @@
 | Most out of town [[participants]] arrive; Stay at the Marriott.
 |-
 ! Monday
-| Morning: Introductions, Proposals, Boot Camps, Coalescing into groups.
-
-Afternoon: Hacking
-
+| Morning: Introductions, Proposals, [[Boot Camps]], Coalescing into groups.<br />
+Afternoon: Hacking <br />
 Evening: Group dinner at [http://www.tobaccoroadsportscafe.com/about/index.html Tobacco Road] restaurant in Durham
 |-
 ! Tuesday
-| Morning: Team status reports; hacking
-
+| Morning: Team status reports; hacking<br />
 Afternoon: Hacking
 |-
 ! Wednesday
-|Morning: Team status reports; hacking
-
+|Morning: Team status reports; hacking<br />
 Afternoon: Hacking
 |-
 ! Thursday
-|Morning: Team status reports; hacking
-
+|Morning: Team status reports; hacking<br />
 Afternoon: Hacking
 |-
 ! Friday
-|Morning: Team status reports; hacking
-
+|Morning: Team status reports; hacking<br />
 Afternoon: Hacking, most out of town participants depart.  NESCent will arrange shuttles from NESCent to RDU.
 |-
 |}
