--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -16,7 +16,7 @@
 | 
 * Morning: Introductions, Proposals, [[Boot Camps]], Coalescing into groups.
 * Afternoon: Hacking 
-* Evening: Group dinner at [http://www.tobaccoroadsportscafe.com/about/index.html Tobacco Road] restaurant in Durham
+* 6:45pm: Group dinner at [http://www.tobaccoroadsportscafe.com/about/index.html Tobacco Road] restaurant in Durham
 |-
 ! Tuesday
 | 
