--- a/wiki/Agenda.mediawiki
+++ b/wiki/Agenda.mediawiki
@@ -7,36 +7,38 @@
 
 {| class="wikitable"
 ! Day
+! Time
 ! Activities
 |-
 ! Sunday
+|
 | Most out of town [[participants]] arrive; Stay at the Marriott.
 |-
-! Monday
-| 
-* Morning: Introductions, Proposals, [[Boot Camps]], Coalescing into groups.
-* Afternoon: Hacking 
-* 6:45pm: Group dinner at [http://www.tobaccoroadsportscafe.com/about/index.html Tobacco Road] restaurant in Durham
+! rowspan="2" | Monday
+! 9am - 5pm 
+| Introductions, Proposals, [[Boot Camps]], Coalescing into groups, lunch, and hacking 
+|-
+! 6:45pm
+| Group dinner at [http://www.tobaccoroadsportscafe.com/about/index.html Tobacco Road] restaurant in Durham
 |-
 ! Tuesday
-| 
-* Morning: Team status reports; hacking
-* Afternoon: Hacking
+! 9am - 5pm
+| Team status reports; hacking, lunch, hacking
 |-
 ! Wednesday
-| 
-* Morning: Team status reports; hacking
-* Afternoon: Hacking
+! 9am - 5pm
+| Team status reports; hacking, lunch, hacking
 |-
 ! Thursday
-|
-* Morning: Team status reports; hacking
-* Afternoon: Hacking
+! 9am - 5pm
+| Team status reports; hacking, lunch, hacking
 |-
-! Friday
-|
-* Morning: Team status reports; hacking
-* Afternoon: Hacking, most out of town participants depart.  NESCent will arrange shuttles from NESCent to RDU.
+! rowspan="2" | Friday
+! 9am - ?
+| Team status reports; hacking, lunch, hacking
+|-
+! PM
+| Hacking, most out of town participants depart.  NESCent will arrange shuttles from NESCent to RDU.
 |-
 |}
 
