--- a/wiki/Main_Page.mediawiki
+++ b/wiki/Main_Page.mediawiki
@@ -48,7 +48,7 @@ Typically, hackathon participants use the morning of the first day of the event 
 
 == Deliverables / Event Results ==
 
-The meeting’s attendance, working groups, and outcomes will be fully logged and documented on the [[gmod:Main Page|GMOD wiki]].  Each working group during the event will typically have its own wiki page, linked from the main EvoHack page, where it documents its minutes and design notes, and provides links to the code and documentation it produces.  Also, since GMOD and NESCent are both committed to open source principles, all code and documentation produced by participants during the hackathon must be published under an [http://www.opensource.org/licenses/category OSI-approved open source license].  As contributions to existing GMOD tools, all hackathon products will most likely satisfy this requirement automatically.
+The meeting’s attendance, working groups, and outcomes will be fully logged and documented on this wiki.  Relevant content will be copied to the [[gmod:Main Page|GMOD wiki]] after the event.  Each working group during the event will typically have its own wiki page, where it documents its minutes and design notes, and provides links to the code and documentation it produces.  Also, since GMOD and NESCent are both committed to open source principles, all code and documentation produced by participants during the hackathon must be published under an [http://www.opensource.org/licenses/category OSI-approved open source license].  As contributions to existing GMOD tools, all hackathon products will most likely satisfy this requirement automatically.
 
 = Sponsorship =
 
