--- a/wiki/Diversity_and_Phenotypes.mediawiki
+++ b/wiki/Diversity_and_Phenotypes.mediawiki
@@ -10,7 +10,7 @@ Please add your name below.
 
 * [[Dave]]
 * [[Seth Redmond]]
-* [[User:Vgapeyev@nescent.org|Vladimir Gapeyev]]
+* [[User:Vg34|Vladimir Gapeyev]]
 * Your name here
 
 == See Also ==
