/* Current state of Chado Natural Diversity module */

--- a/wiki/Boot_Camps.mediawiki
+++ b/wiki/Boot_Camps.mediawiki
@@ -1,7 +1,7 @@
 ==Current state of Chado Natural Diversity module==
-People interested in attending: [[User:Vg34|Vladimir]]
+People interested in attending: [[User:Vg34|Vladimir]] (add your name)
 
-Resources I am aware of: 
+Relevant resources and questions:  
 * [http://gmod.org/wiki/Chado_Natural_Diversity_Module_Working_Group Chado Natural Diversity Module Working Group] 
 * [http://gmod.org/wiki/Talk:Chado_Natural_Diversity_Module_Working_Group the talk page] for the above, which actually appears more informative! 
-Has the new Chadoesque version of the Chado ND schema mentioned on these pages already been released?  Where could we see it?
+* Has the new Chadoesque version of the Chado ND schema mentioned on these pages already been released?  Where could we see it?
