--- a/wiki/Boot_Camps.mediawiki
+++ b/wiki/Boot_Camps.mediawiki
@@ -1,5 +1,6 @@
 ==Current state of Chado Natural Diversity module==
-People interested in attending: [[User:Vg34|Vladimir]] (add your name)
+
+''People interested in attending:'' [[User:Vg34|Vladimir]], [[User:diapriid@gmail.com|Matt]] (add your name)
 
 Relevant resources and questions:  
 * [http://gmod.org/wiki/Chado_Natural_Diversity_Module_Working_Group Chado Natural Diversity Module Working Group] 
@@ -10,9 +11,13 @@ Relevant resources and questions:
 
 == [[gmod:Chado|Chado]] essentials ==
 
+''People interested in attending:'' [[User:diapriid@gmail.com|Matt]] (add your name)
+
 The Chado Way, Features, CVs, DBXREFs and IDs, ..
 
 == Genome Browsing Essentials ==
+
+''People interested in attending:'' [[User:diapriid@gmail.com|Matt]] (add your name)
 
 [[gmod:GBrowse|GBrowse]], [[gmod:JBrowse|JBrowse]], [[gmod:GBrowse_syn|GBrowse_syn]], CoGE, Mauve.; 
 
