Change to wiki page

--- a/wiki/Diversity_and_Phenotypes.mediawiki
+++ b/wiki/Diversity_and_Phenotypes.mediawiki
@@ -11,6 +11,7 @@ Please add your name below.
 * [[Dave]]
 * [[Seth Redmond]]
 * [[User:Vg34|Vladimir Gapeyev]]
+* [[User:diapriid@gmail.com|Matt Yoder]]
 * Your name here
 
 == See Also ==
