--- a/wiki/Boot_Camps.mediawiki
+++ b/wiki/Boot_Camps.mediawiki
@@ -6,6 +6,7 @@ Relevant resources and questions:
 * [http://gmod.org/wiki/Chado_Natural_Diversity_Module_Working_Group Chado Natural Diversity Module Working Group] 
 * [http://gmod.org/wiki/Talk:Chado_Natural_Diversity_Module_Working_Group the talk page] for the above, which actually appears more informative! 
 * Has the new Chadoesque version of the Chado ND schema mentioned on these pages already been released?  Where could we see it?
+* The [[Diversity and Phenotypes]] abstract mentions "A recently reported prototype of a Chado data adapter for Phenote, GMODs phenotype annotation tool, could be generalized to become the data persistence interface for such data."  Is there a paper or another source that reports on this adapter?
 
 ''I would add explaining the current phenotype implementation.  [[User:Dpc13|Dave C]]''
 
