Change to wiki page

--- a/wiki/Data_display_by_geolocation_via_google_maps.mediawiki
+++ b/wiki/Data_display_by_geolocation_via_google_maps.mediawiki
@@ -29,7 +29,7 @@ With the addition of the geolocation tables to the ND natural Diversity Module i
 *+ others (please add your own)
 
 ; Results
-*map with pins for binary values / heatmaps for stochastic
+*map with pins for binary values / heatmaps for real no.s
 
 
 [[Category:Use Cases]]
