--- a/wiki/Use_Cases.mediawiki
+++ b/wiki/Use_Cases.mediawiki
@@ -13,7 +13,7 @@ We already have
 
 == [[Diversity and Phenotypes]] Use Cases == 
 
-* Your use case here
+* [[Data display by geolocation via google maps]]
 
 == Multi-objective Use Cases ==
 
