Change to wiki page

--- a/wiki/Diversity_and_Phenotypes.mediawiki
+++ b/wiki/Diversity_and_Phenotypes.mediawiki
@@ -12,6 +12,7 @@ Please add your name below.
 * [[Seth Redmond]]
 * [[User:Vg34|Vladimir Gapeyev]]
 * [[User:diapriid@gmail.com|Matt Yoder]]
+* [[User:balhoff@nescent.org|Jim Balhoff]]
 * Your name here
 
 == See Also ==
