Change to wiki page

--- a/wiki/Diversity_and_Phenotypes.mediawiki
+++ b/wiki/Diversity_and_Phenotypes.mediawiki
@@ -13,6 +13,7 @@ Please add your name below.
 * [[User:Vg34|Vladimir Gapeyev]]
 * [[User:diapriid@gmail.com|Matt Yoder]]
 * [[User:balhoff@nescent.org|Jim Balhoff]]
+* [[User:ybendana@usc.edu|Yuri Bendana]]
 * Your name here
 
 == See Also ==
