Change to wiki page

--- a/wiki/Diversity_and_Phenotypes.mediawiki
+++ b/wiki/Diversity_and_Phenotypes.mediawiki
@@ -14,6 +14,7 @@ Please add your name below.
 * [[User:diapriid@gmail.com|Matt Yoder]]
 * [[User:balhoff@nescent.org|Jim Balhoff]]
 * [[User:ybendana@usc.edu|Yuri Bendana]]
+* [[User:friesen@usc.edu|Maren Friesen]]
 * Your name here
 
 == See Also ==
